<resources>
    <string name="app_name">Bus Mapper</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="search_by_bus_number">Search by bus number…</string>
    <string name="search_for_buses">Search for buses</string>
    <string name="bus_around_you">Bus around you</string>
    <string name="date_of_journey">Date of journey</string>
    <string name="search_buses">Search Buses</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="bus_path">%s to %s</string>
    <string name="from_to">%s - %s</string>
    <string name="total_buses">%d %s</string>
    <string name="api_key">AIzaSyBqw0mtj7mJILvVqKDSfUlwLn0TmrXOs2w</string>
    <string name="sample_bus_number">DL04AA1234</string>
    <string name="where_from">Where From?</string>
    <string name="where_to">Where To?</string>
    <string name="title_activity_bus_location">BusLocationActivity</string>
    <string name="signup_login">SignUp / Login</string>
    <string name="place_hint">Delhi, Bareilly</string>
    <string name="rupees">"\u20B9 %s"</string>
    <string name="duration">"%dh %dm"</string>
    <string name="air_conditioner">Air Conditioner</string>
    <string name="charging_point">Charging Point</string>
    <string name="cctv">CCTV</string>
    <string name="water_bottle">Water Bottle</string>
    <string name="bus_amenities">Bus Amenities</string>
    <string name="bus_route">Bus Route</string>
    <string name="bus_location">Bus Location</string>
    <string name="sample_bus_stop">Bareilly, DD Puram</string>
    <string name="sos">SOS</string>
    <string name="help_and_support">Help and Support</string>
    <string name="about_us">About Us</string>
    <string name="logout">Logout</string>
    <string name="favourite">Favourite</string>
    <string name="log_in">Log In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="create_new_account">Create New Account</string>
    <string name="new_account">New Account</string>
    <string name="name">Name</string>
    <string name="re_password">Re-Type Password</string>
    <string name="already_have_account">Already have account</string>
    <string name="sign_up">Sign Up</string>
    <string name="info_msg">SMS will automatically send to these contacts whenever an alert is triggered regular SMS charges will apply.</string>
    <string name="alert_message">Alert Message</string>
    <string name="add_contacts">Add Contacts</string>
    <string name="contacts">Contacts</string>
    <string name="send_alert">Send Alert</string>
    <string name="save">SAVE</string>
    <string name="favourites">Favourites</string>
    <string name="change_language">Change Language</string>
    <string name="share">Share</string>
    <string name="feedback">Feedback</string>
    <string name="help">Help</string>
    <string name="more">More</string>
    <string name="your_name">Your Name*</string>

</resources>