<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SosActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:text="@string/sos"
        android:textSize="25sp"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/ic_back_arrow"
        android:drawablePadding="30dp"
        android:gravity="center_vertical"
        android:paddingHorizontal="20dp"
        android:paddingVertical="15dp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/white"
        android:id="@+id/title_textView"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/info_msg"
        android:textSize="16sp"
        android:textColor="@color/gray"
        android:paddingHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/title_textView"
        android:id="@+id/info_textView"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alert_message"
        android:paddingHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:textColor="@color/black_300"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/info_textView"
        android:id="@+id/alert_message_textView"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/alert_message_textView"
        android:paddingHorizontal="5dp"
        android:id="@+id/alert_message_editText"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="50dp"
        android:layout_height="25dp"
        android:text="@string/save"
        app:layout_constraintTop_toBottomOf="@+id/alert_message_editText"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="20dp"
        android:visibility="invisible"
        android:textSize="11sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@color/turquoise_blue_500"
        android:id="@+id/save_button"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contacts"
        android:paddingHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:textSize="18sp"
        android:textColor="@color/black_300"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/alert_message_editText"
        android:id="@+id/contacts_heading_textView"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintTop_toBottomOf="@id/contacts_heading_textView"
        android:id="@+id/contacts_scrollView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical"
            android:id="@+id/contacts_linear"/>

    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/add_contact_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner_solid_green"
        android:text="@string/add_contacts"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:elevation="2dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/contacts_scrollView"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/yellow"
        android:text="@string/send_alert"
        android:paddingVertical="15dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/send_alert_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>