<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".BusDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:elevation="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/linear">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingTop="20dp"
            android:paddingBottom="5dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:id="@+id/bus_id_textView"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/gray_700"
            android:textSize="15sp"
            android:id="@+id/company_name_textView"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/linear"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:id="@+id/linear2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="30dp"
            android:id="@+id/boarding_time_textView"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="end"
            android:layout_marginEnd="30dp"
            android:id="@+id/dropping_time_textView"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear2"
        app:layout_constraintBottom_toTopOf="@id/linear3"
        android:textSize="16sp"
        android:gravity="center"
        android:id="@+id/duration_textView"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/linear2"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        android:id="@+id/linear3">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:layout_marginStart="30dp"
            android:id="@+id/boarding_city_textView"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:gravity="end"
            android:layout_marginEnd="30dp"
            android:id="@+id/dropping_city_textView"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear3"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/bus_amenities"
        android:id="@+id/bus_amenities"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bus_amenities"
        android:id="@+id/linear4">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/air_conditioner"
            android:textSize="12sp"
            app:drawableTopCompat="@drawable/ic_ac"
            android:visibility="gone"
            android:id="@+id/ac_textView"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cctv"
            android:textSize="12sp"
            app:drawableTopCompat="@drawable/ic_cctv"
            android:visibility="gone"
            android:id="@+id/cctv_textView"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/charging_point"
            android:textSize="12sp"
            app:drawableTopCompat="@drawable/ic_socket"
            android:visibility="gone"
            android:id="@+id/charging_point_textView"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/water_bottle"
            android:textSize="12sp"
            app:drawableTopCompat="@drawable/ic_water_bottle"
            android:visibility="gone"
            android:id="@+id/water_bottle_textView"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear4"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/bus_route"
        android:id="@+id/bus_route_textView"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/bus_route_textView"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/scrollView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:id="@+id/bus_route_linear"
            android:orientation="vertical" />

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>